# Trajectory-Optimization

./: README.md  mga_opt_commands.txt  pyproject.toml  requirements.txt
configs/: parameters.yaml
outputs/: best_20250630_203337.json  best_20250630_211537.json  best_20250701_010340.json  best_20250701_011312.json  best_20250701_164332.json  best_20250701_165953.json  best_20250701_172438.json  best_20250701_173406.json  best_20250701_182328.json  best_20250701_184325.json  best_20250701_191110.json  best_20250701_210600.json  best_20250701_234052.json
src/mga_opt/: __init__.py  cli.py  constants.py  cost.py  dynamics.py  ephemeris.py  plotting.py  save_trajectory_gif.py
src/mga_opt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mga_opt/search/: ga.py  local.py
